--- a/program.yaml
+++ b/program.yaml
@@ -1,15 +1,10 @@
-- name: install ngix
-  hosts: dev
-  become: yes # to access root 
+
+- hosts: dev
+  become: yes
   tasks:
-  - name: install nginx
-     ansible.builtin.dnf:
-      name: install
-      state: latest 
-
-  - name: start nginx
-     ansible.builtin.service:
-      name: nginx
-      state: started
-      enabled: yes  
-
+    - name: install nginx
+      action: yum name=nginx state=present
+    - name: start nginx
+      service:
+          name: nginx
+          state: started
