--- a/condition.yaml
+++ b/condition.yaml
@@ -6,7 +6,7 @@
     private: no
   tasks:
   - name: number is less than 20
-    ansible.buitin.debug:
+    ansible.builtin.debug:
       msg: "given number {{number}} is less than 20"
       when: number | int < 20
 
@@ -14,6 +14,6 @@
     ansible.builtin.debug:
       msg: "given number {{number}} is greater than or equal to 20"
       when: number | int >= 20
-          
+
   
   
