--- a/condition.yaml
+++ b/condition.yaml
@@ -10,7 +10,7 @@
       msg: "given number {{number}} is less than 30"
       when: number | int < 30
 
-  - name: number is greter than or equal to 30
+  - name: number is greater than or equal to 30
     ansible.builtin.debug:
       msg: "given number {{number}} is greater than or equal to 30"
       when: number | int >= 30
