--- a/filters.yaml
+++ b/filters.yaml
@@ -6,3 +6,12 @@
   - name : lowercase
     ansible.builtin.debug:
       msg: "{{ greeting  | lower }}"
+
+- name: remove duplicates
+  hosts: localhost
+  vars:
+   numbers: [2, 4, 5, 5, 6, 2, 8]
+  tasks:
+  - name: remove duplicates
+    ansible.builtin.debug:
+      msg: "{{ numbers | unique }}"       
