--- a/loops.yaml
+++ b/loops.yaml
@@ -9,3 +9,15 @@
     - Linus
     - Ansible
     - AWS  
+
+- name:list names
+  hosts: localhost
+  tasks:
+  - name: print list names
+    ansible.builtin.debug:
+      msg: "I am learning {{ item }}"
+    loop:
+    - Java
+    - linux
+    - python
+          
