--- a/loops.yaml
+++ b/loops.yaml
@@ -11,3 +11,11 @@
     - AWS  
 
 
+  tasks:
+  - name: print list names
+    ansible.builtin.debug:
+      msg: "I am learning {{ item }}"
+    loop:
+    - Java
+    - linux
+    - python
