--- a/loops2.yaml
+++ b/loops2.yaml
@@ -1,5 +1,5 @@
 - name: install applications
-  hosts: dev
+  hosts: localhost
   become: yes 
   tasks:
   - name: install applications
@@ -7,6 +7,6 @@
       name: "{{ item }}"
       state: latest
     loop:
-    - nginx
     - mysql
-    - postfix  
+    - nginx
+   
