--- a/loops2.yaml
+++ b/loops2.yaml
@@ -5,10 +5,10 @@
   tasks:
   - name: install package
     ansible.builtin.yum:
-     name: {{ item }}
+     name: "{{ item }}"
      state: latest
     loop:
     - nginx
     - mysql
-     
+
 
